Fixed compilation problem with "toList"